--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-@"
 # --- Node ---
 node_modules/
 npm-debug.log*
@@ -13,8 +12,9 @@ __pycache__/
 
 # --- Modelos y binarios grandes ---
 models/
-llama_cpp/**
+llama_cpp/*
 !llama_cpp/README.md
+!llama_cpp/.gitkeep
 
 # --- Datos locales / temporales ---
 feedback.csv
@@ -35,4 +35,3 @@ build/
 .idea/
 .DS_Store
 Thumbs.db
-"@ | Out-File -Encoding utf8 .gitignore
